# map-guesser

./: .gitignore  CMakeLists.txt  main.cpp
include/app/: randomizer.h  results.h
include/app/ui/: map_file_access.h
include/app/ui/pages/: game_setup.h  round_results.h  start.h  street_view.h
include/app/ui/widgets/: map_editor_top_bar.h
include/app/ui/widgets/propedit/: base.h  map_path.h
include/db/: location_pool.h
include/game/: game_window.h  params.h  randomizer.h  results.h  session.h
include/game/pages/: map_editor.h  round_results.h  start.h  street_view.h
include/geo/: location.h  map.h  point.h  region.h
include/google/: coverage.h  distance_map.h  distance_map_bridge.h  distance_updater.h  html_reader.h  interactive_map.h  interactive_map_bridge.h  polygon_map.h  polygon_map_bridge.h  streetview.h
include/map/: file_selector.h
include/map/editor/: top_bar.h
include/mapeditor/: top_bar.h
include/planar/: map.h  point.h  region.h  triangle.h
include/streetview/: coords_receiver.h  distance_map.h  distance_updater.h  html_reader.h  interactive_map.h  interactive_map_bridge.h  streetview.h  token.h
res/: streetview.html
src/: README.md
src/app/: error_message.cpp  error_message.h  main_window.cpp  main_window.h  random_point.cpp  random_point.h  randomizer.cpp  results.cpp
src/app/ui/: map_file_access.cpp  map_file_selector.cpp  map_file_selector.h
src/app/ui/pages/: game_setup.cpp  game_setup.h  map_editor.cpp  map_editor.h  round_results.cpp  start.cpp  start.h  street_view.cpp
src/app/ui/widgets/: map_editor_top_bar.cpp  map_editor_top_bar.h
src/app/ui/widgets/propedit/: base.cpp  base.h  map.cpp  map_path.cpp  positive_number.cpp  positive_number.h
src/common/: location.h
src/db/: location_pool.cpp  location_pool.h
src/game/: defs.h  error_message.cpp  error_message.h  game.cpp  game.h  game_window.cpp  main_window.cpp  main_window.h  params.h  random_point.cpp  random_point.h  randomizer.cpp  randomizer.h  results.cpp  round_results.cpp  round_results.h  session.cpp  session.h
src/game/engine/: active_round.h  defs.h  round_system.cpp  round_system.h  scoring_system.cpp  scoring_system.h  state.h
src/game/mode/: engine.h  engine_base.cpp  engine_base.h  engine_fixed_rounds.cpp  engine_fixed_rounds.h  observer.h
src/game/pages/: map_editor.cpp  round_results.cpp  start.cpp  street_view.cpp
src/geo/: consts.h  location.cpp  location.h  map.cpp  map.h  map_export.cpp  map_import.cpp  point.cpp  point.h  region.cpp  region.h
src/google/: coverage.cpp  distance_map.cpp  distance_map_bridge.cpp  html_reader.cpp  interactive_map.cpp  interactive_map.h  interactive_map_bridge.cpp  polygon_map.cpp  polygon_map.h  polygon_map_bridge.cpp  polygon_map_bridge.h  streetview.cpp  streetview.h  token.cpp  token.h
src/google/html/: distance_map.html  interactive_map.html  polygon_map.html
src/lambert/: projection.cpp  projection.h
src/map/: file_selector.cpp
src/map/editor/: top_bar.cpp
src/mapeditor/: top_bar.cpp
src/planar/: map.cpp  map.h  point.cpp  region.cpp  triangle.cpp  triangulation.cpp  triangulation.h
src/streetview/: coords_receiver.cpp  coverage.cpp  coverage.h  distance_map.cpp  distance_map_bridge.cpp  distance_updater.cpp  html_reader.cpp  interactive_map.cpp  interactive_map_bridge.cpp  streetview.cpp  streetview.h  streetview.html  token.cpp  token.h
src/streetview/html/: distance_map.html  interactive_map.html  streetview.html
src/styles/: dark_blue.qss
src/ui/: commands.h  controller.cpp  controller.h  main_window.cpp  main_window.h  map_file_access.cpp  map_file_access.h  map_file_selector.cpp  map_file_selector.h
src/ui/bridge/: commands.h  connection.cpp  connection.h
src/ui/google/: distance_map.cpp  distance_map.h  distance_map_bridge.cpp  distance_map_bridge.h  html_reader.cpp  html_reader.h  interactive_map.cpp  interactive_map.h  interactive_map_bridge.cpp  interactive_map_bridge.h  polygon_map.cpp  polygon_map.h  polygon_map_bridge.cpp  polygon_map_bridge.h  streetview.cpp  streetview.h
src/ui/google/html/: polygon_map.html
src/ui/pages/: game_setup.cpp  game_setup.h  map_editor.cpp  map_editor.h  round_results.cpp  round_results.h  start.cpp  start.h  street_view.cpp  street_view.h
src/ui/styles/: dark_blue.qss
src/ui/utils/: map_file_access.cpp  map_file_access.h  map_file_selector.cpp  map_file_selector.h
src/ui/widgets/: map_editor_top_bar.cpp  map_editor_top_bar.h  propedit.cpp  propedit.h  start_page_bottom_bar.cpp  start_page_bottom_bar.h
src/ui/widgets/propedit/: base.cpp  base.h  map.cpp  map.h  positive_number.cpp  positive_number.h
src/util/: consumable.h
